1.2-7
* Added TPS to Threat mode. Optional, by default on.
* Threat mode now shows target as title.
* Fixed misses being reported as minimum hit in tooltip.

1.2-6
* Added an Absorbs mode. Note that this mode is not and can not be made to be accurate at this time.
* Fixed report function not giving enough lines.
* Fixed Failbot mode not showing enough lines.
* Moved LibFail-1.0 dependency to main addon (affects nolib and svn users).

1.2-5
* The report command, when used on a window, will now always use that window's current view.
* Bar display: shift-clicking on background or bars will now open the menu.

1.2-4
* Added Russian translation (incomplete, someone finish it please).
* Fixed HPS not showing.
* Fixed segment list skipping segments.

1.2-3
* Added a reset command to the menu.
* Added a mana regen mode, part of a new SkadaPower module.
* Added optional tooltips showing min/max/average hit for Damage mode.
* Failbot and boss libraries are now kept up to date.

1.2-2
* 3.1 compatible.

1.2-1
* Moved window configuration to the main configuration.
* Added window header font setting.
* Made spell icons a little prettier (thanks Aezay)
* Added displaying of miss types in Damage mode spell details.
* Fixed "Only keep bosses" options so that last fight is still displayed even if it is not a boss fight.
* Made LibDBIcon-1.0 optional for the disembedding crowd.
* Fixed background frame not displayed properly on first bar (thanks whynona2)
* Major changes in backend. Modes no longer have anything to do with the display of data. Currently there is only the traditional bar display system used by most damage meters, but implementing a new system should be fairly trivial.
* Added options to hiude DPS/HPS in damage and healing modes. Temporary solution which should be replaced with a generic field selection at some point.
* Bar display: Added options to use or not use class colors for bars and text.